--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "simplebot",
   "version": "1.0.0",
   "description": "I'm making this bot to be easy to add commands and be used by anybody.\r want to add the bot as seen in this repository?\r https://discord.com/api/oauth2/authorize?client_id=833398362183172117&permissions=8&scope=bot",
@@ -7,11 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type": "module",
     "url": "git+https://github.com/SomeAspy/SimpleBot.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Some_Aspy",
+  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/SomeAspy/SimpleBot/issues"
   },
