--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@discordjs/opus": "^0.5.0",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
-    "ffmpeg-static": "^4.3.0"
+    "ffmpeg-static": "^4.3.0",
+    "nekos.life": "^2.0.7"
   }
 }
