--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.3.0",
-    "nekos.life": "^2.0.7"
+    "nekos.life": "^2.0.7",
+    "ytdl-core": "^4.5.0"
   }
 }
