--- a/Examples/.env.txt
+++ b/Examples/.env.txt
@@ -1,2 +1,5 @@
-DISCORD_TOKEN=[Bot Token here]
-PREFIX=[Prefix Here]
+DISCORD_TOKEN="DISCORD_TOKEN_HERE"
+
+SQL_HOST="SQL_HOST_HERE"
+SQL_USER="SQL_USER_HERE"
+SQL_PASSWORD="SQL_PASSWORD_HERE"
