--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "fake-tweet": "^0.1.16",
     "ffmpeg-static": "^4.3.0",
+    "mongodb": "^3.6.6",
     "nekos.life": "^2.0.7",
     "ytdl-core": "^4.5.0"
   }
