--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "simplebot",
   "version": "1.0.0",
   "description": "I'm making this bot to be easy to add commands and be used by anybody.\r want to add the bot as seen in this repository?\r https://discord.com/api/oauth2/authorize?client_id=833398362183172117&permissions=8&scope=bot",
-  "main": "init.js",
+  "main": "index.js",
   "scripts": {
     "run": "node index.js"
   },
